# NR_PRACH

./: .gitignore  1  CMakeLists.txt  README.md  a.out  build.sh  config_get.c  config_get.h  config_paramdesc.h  defs.h  detected.py  detected_minus_shift.py  dfts_load.c  fftw.c  lib_defs.h  load_module_shlib.h  nr_prach.c  prach.mlx  prachF.m  result.txt  run.sh  tasks.todo  txdata.m  txdataF.m  txdataF_b.m  txdataF_gNB.m  txdata_gNB.m
common/: fftw.c  oai_dfts_int.c  sse_intrin.h  tools_defs.h  write_output.c
detection/: prach_detect.c
fftw-3.3.10/: Makefile  config.h  config.status  libtool
fftw-3.3.10/api/: Makefile
fftw-3.3.10/dft/: Makefile
fftw-3.3.10/dft/scalar/: Makefile
fftw-3.3.10/dft/scalar/codelets/: Makefile
fftw-3.3.10/dft/simd/: Makefile
fftw-3.3.10/dft/simd/altivec/: Makefile
fftw-3.3.10/dft/simd/avx/: Makefile
fftw-3.3.10/dft/simd/avx-128-fma/: Makefile
fftw-3.3.10/dft/simd/avx2/: Makefile
fftw-3.3.10/dft/simd/avx2-128/: Makefile
fftw-3.3.10/dft/simd/avx512/: Makefile
fftw-3.3.10/dft/simd/common/: Makefile
fftw-3.3.10/dft/simd/generic-simd128/: Makefile
fftw-3.3.10/dft/simd/generic-simd256/: Makefile
fftw-3.3.10/dft/simd/kcvi/: Makefile
fftw-3.3.10/dft/simd/neon/: Makefile
fftw-3.3.10/dft/simd/sse2/: Makefile
fftw-3.3.10/dft/simd/vsx/: Makefile
fftw-3.3.10/doc/: Makefile
fftw-3.3.10/doc/FAQ/: Makefile
fftw-3.3.10/genfft/: Makefile
fftw-3.3.10/kernel/: Makefile
fftw-3.3.10/libbench2/: Makefile
fftw-3.3.10/m4/: Makefile
fftw-3.3.10/mpi/: Makefile
fftw-3.3.10/rdft/: Makefile
fftw-3.3.10/rdft/scalar/: Makefile
fftw-3.3.10/rdft/scalar/r2cb/: Makefile
fftw-3.3.10/rdft/scalar/r2cf/: Makefile
fftw-3.3.10/rdft/scalar/r2r/: Makefile
fftw-3.3.10/rdft/simd/: Makefile
fftw-3.3.10/rdft/simd/altivec/: Makefile
fftw-3.3.10/rdft/simd/avx/: Makefile
fftw-3.3.10/rdft/simd/avx-128-fma/: Makefile
fftw-3.3.10/rdft/simd/avx2/: Makefile
fftw-3.3.10/rdft/simd/avx2-128/: Makefile
fftw-3.3.10/reodft/: Makefile
fftw-3.3.10/simd-support/: Makefile
fftw-3.3.10/support/: Makefile
fftw-3.3.10/tests/: Makefile  bench
fftw-3.3.10/threads/: Makefile
fftw-3.3.10/tools/: Makefile  fftw-wisdom
generation/: prach_gen.c
include/: nr_prach.h
src/: nr_prach.c
(+8 files in other folders)
